@@ -2,19 +2,20 @@ package ru.otus;
 import javax.management.*;
 import java.lang.management.ManagementFactory;
 /*
--Xms128m -Xmx128m
+VM OPTIONS:
 
--XX:+UseSerialGC
- -XX:+UseParallelGC
- -XX:+UseConcMarkSweepGC
-  -XX:+UseG1GC
+-Xms128m -Xmx128m
+-verbosegc
+-XX:+PrintGC
+ -XX:+PrintGCDetails
+
  */
 
 public class Main {
     public static void main(String... args) throws Exception {
         System.out.println("Starting pid: " + ManagementFactory.getRuntimeMXBean().getName());
 
-        int size = 5 * 1000 * 1000;
+        int size = 1 * 1000 * 1000;
         //int size = 50 * 1000 * 1000;//for OOM with -Xms512m
         //int size = 50 * 1000 * 100; //for small dump
 
